update: add windows exe