@@ -47,6 +47,8 @@
             <groupId>org.to2mbn</groupId>
             <artifactId>jmccc-yggdrasil-authenticator</artifactId>
             <version>2.5-beta-1</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/jmccc-yggdrasil-authenticator-2.5-beta-1.jar</systemPath>
         </dependency>
     </dependencies>
 
@@ -78,27 +80,44 @@
             </plugin>
 
             <plugin>
-                <groupId>com.zenjava</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>8.8.3</version>
-                <configuration>
-                    <vendor>mogoX</vendor>
-                    <mainClass>cc.zoyn.mogox.Main</mainClass>
-                </configuration>
+                <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                <artifactId>launch4j-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>create-jfxjar</id>
+                        <id>l4j-clui</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>build-jar</goal>
+                            <goal>launch4j</goal>
                         </goals>
-                    </execution>
-                    <execution>
-                        <id>create-native</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>build-native</goal>
-                        </goals>
+                        <configuration>
+                            <headerType>console</headerType>
+                            <outfile>target/蘑菇乡-启动器-1.0.exe</outfile>
+                            <jar>target/mogoX-Launcher-1.0.jar</jar>
+                            <errTitle>encc</errTitle>
+                            <icon>${basedir}/src/main/resources/favicon.ico</icon>
+                            <classPath>
+                                <mainClass>cc.zoyn.mogox.Main</mainClass>
+                                <addDependencies>false</addDependencies>
+                                <preCp>anything</preCp>
+                            </classPath>
+                            <jre>
+                                <minVersion>1.8.0</minVersion>
+                                <opts>
+                                    <opt>-Djava.endorsed.dirs=./endorsed</opt>
+                                </opts>
+                            </jre>
+                            <versionInfo>
+                                <fileVersion>1.0.0.0</fileVersion>
+                                <txtFileVersion>txt file version?</txtFileVersion>
+                                <fileDescription>mogoX Launcher</fileDescription>
+                                <copyright>mogoX Copyright</copyright>
+                                <productVersion>1.0.0.0</productVersion>
+                                <txtProductVersion>1.0.0.0</txtProductVersion>
+                                <productName>mogoX Launcher</productName>
+                                <internalName>ccne</internalName>
+                                <originalFilename>mogoX Launcher.exe</originalFilename>
+                            </versionInfo>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
